--- a/client/src/assets/sass/components/_avatarSm.scss
+++ b/client/src/assets/sass/components/_avatarSm.scss
@@ -3,13 +3,29 @@
   position: relative;
   width: 3rem;
   height: 3rem;
-  background-color: $color-bg-light;
-  border-radius: 100%;
-  overflow: hidden;
+
+  &__bgOverlay{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    border-radius: 100%;
+    background-color: $color-bg-light;
+
+    z-index: 1;
+  }
 
   img{
     width: 100%;
     height: 100%;
+    border-radius: 100%;
+    position: relative;
+    z-index: 10;
+
   }
 
   .online{
@@ -22,6 +38,8 @@
     background-color: #31A24C;
     border-radius: 100%;
 
+    z-index: 20;
   }
+
 
 }
