--- a/client/src/assets/sass/components/_feedPost.scss
+++ b/client/src/assets/sass/components/_feedPost.scss
@@ -109,6 +109,9 @@
     border-top: 1px solid rgba(#000, 0.2);
 
 
+
+
+
     &__item {
       display: flex;
       justify-content: center;
@@ -174,6 +177,9 @@
 
     }
 
+    .childWith50{
+      width: 50%;
+    }
 
   }
 
