--- a/client/src/assets/sass/pages/_messanger.scss
+++ b/client/src/assets/sass/pages/_messanger.scss
@@ -21,7 +21,10 @@
 
     display: flex;
     flex-flow: column;
-    justify-content: flex-end;
+    //overflow-y is not working with justify-content flex-end
+    //justify-content: flex-end;
+
+
 
     height: calc(100% - var(--editor-height));
 
