add share and logout, updated friends and search pages, error handling and responses with axios

--- a/client/src/assets/sass/base/_helper.scss
+++ b/client/src/assets/sass/base/_helper.scss
@@ -109,3 +109,12 @@
   border-radius: $container-border-radius;
 
 }
+
+.textSmall{
+  font-size: 1.4rem;
+  display: block;
+}
+
+.textLeft{
+  text-align: left!important;
+}
