--- a/client/src/assets/sass/main.scss
+++ b/client/src/assets/sass/main.scss
@@ -46,6 +46,7 @@
 @import "components/loading";
 
 @import "components/message";
+@import "components/showResponse";
 
 @import "pages/home";
 @import "pages/messanger";
