--- a/client/src/assets/sass/pages/_home.scss
+++ b/client/src/assets/sass/pages/_home.scss
@@ -1,13 +1,12 @@
-.home{
+.home {
 
 
-
-  &__container{
+  &__container {
 
     margin: 0 auto;
     position: relative;
 
-    &__text{
+    &__text {
 
 
       width: 50%;
@@ -20,14 +19,14 @@
 
       }
 
-      h1{
+      h1 {
         font-size: 3.4rem;
         font-weight: 600;
         text-align: center;
         z-index: 10;
       }
 
-      p{
+      p {
         font-size: 1.8rem;
         margin-top: 1rem;
         width: 80%;
@@ -36,9 +35,7 @@
       }
 
 
-
-
-      img{
+      img {
         margin-top: 3rem;
 
         width: 55%;
@@ -52,7 +49,7 @@
           position: absolute;
           left: 50%;
           top: 50%;
-          transform: translate(-50%,-50%);
+          transform: translate(-50%, -50%);
           width: 80%;
           opacity: 0.13;
 
@@ -63,7 +60,7 @@
     }
 
 
-    &__form{
+    &__form {
 
       width: 45%;
       min-height: 55rem;
@@ -72,7 +69,6 @@
 
       background-color: white;
       border-radius: 6px;
-
 
 
       @media screen and (max-width: 700px) {
@@ -84,12 +80,12 @@
       }
 
 
-      &__loginLink{
+      &__loginLink {
         display: flex;
 
         font-size: 1.3rem;
 
-        a{
+        a {
           font-weight: 600;
           margin-left: 0.4rem;
         }
@@ -97,16 +93,25 @@
       }
 
 
-      input,select{}
+      input, select {
+      }
 
     }
 
 
-    .loginForm{
+    .loginForm {
       min-height: 35rem;
+      form label:first-of-type {
+        margin-top: 0;
+      }
     }
   }
 
 
 }
 
+.formErrorMsg{
+  width: 90%;
+  font-size: 1.7rem;
+  color: red;
+}
