--- a/client/src/assets/sass/pages/_messanger.scss
+++ b/client/src/assets/sass/pages/_messanger.scss
@@ -16,6 +16,13 @@
   flex-flow: column;
   justify-content: space-between;
 
+
+
+  @media (max-width: 760px) {
+    width: 100%;
+  }
+
+
   &__messagesCont{
 
 
