--- a/client/src/assets/sass/components/_avatar.scss
+++ b/client/src/assets/sass/components/_avatar.scss
@@ -20,8 +20,8 @@
   }
 
   img{
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
     border-radius: 100%;
     position: relative;
     z-index: 10;
