--- a/client/src/assets/sass/components/_sidebar.scss
+++ b/client/src/assets/sass/components/_sidebar.scss
@@ -1,21 +1,21 @@
-.sidebar{
+.sidebar {
 
   position: fixed;
   top: $header-height;
   left: 0;
   z-index: 1000;
 
-  height: calc( 100vh - #{$header-height} );
+  height: calc(100vh - #{$header-height});
   width: $sidebar-width;
   overflow-y: auto;
   transition: all 0.1s;
 
-  &:hover{
+  &:hover {
     background-color: $color-container-bg;
   }
 
 
-  &__container{
+  &__container {
     width: 100%;
     height: 100%;
     display: flex;
@@ -25,17 +25,17 @@
   }
 
 
-  .sidebarHeading{
+  .sidebarHeading {
     font-size: 1.8rem;
     text-align: left;
     width: 100%;
     padding-bottom: 0.7rem;
     padding-left: 1rem;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   }
 
 
-  &__item{
+  &__item {
 
     display: flex;
     align-items: center;
@@ -44,11 +44,10 @@
     position: relative;
 
 
-
     &:hover,
     &:focus,
-    .active{
-      background-color: rgba($color-gray-200,0.75);
+    .active {
+      background-color: rgba($color-gray-200, 0.75);
       cursor: pointer;
       //box-shadow: 1px 5px 10px rgba(0,0,0,0.2);
 
@@ -56,18 +55,18 @@
 
     }
 
-    &:focus{
+    &:focus {
       text-decoration: underline;
     }
 
 
-    img{
+    img {
       width: 2rem;
       //fill: $color-primary;
-      image-rendering:high-quality;
+      image-rendering: high-quality;
     }
 
-    p{
+    p {
       font-size: 1.8rem;
       color: $color-primary;
       font-weight: 400;
@@ -76,28 +75,81 @@
     }
 
 
+  }
 
 
+  .logoutItem {
+    @media (min-width: 760px) {
+      display: none;
+    }
+
+  }
+
+}
 
 
+.sidebarOnline {
+  left: unset;
+  right: 0;
 
+
+  @media (max-width: 760px) {
+    width: 21%;
+  }
+
+
+  @media (max-width: 760px) {
+    width: 30%;
+    min-width: 20rem;
+    background-color: white;
+    z-index: 2000;
+    transform: translateX(100%);
   }
 
 
 }
 
+.sidebarOptions {
 
-.sidebarOnline{
-  left: unset;
-  right: 0;
+  @media (max-width: 760px) {
+    width: 30%;
+    min-width: 20rem;
+    background-color: white;
+    z-index: 2000;
+    transform: translateX(-100%);
+  }
+
+}
+
+
+.showSidebar {
+  transform: translateX(0) !important;
+}
+
+.hideSidebarLG {
+
+  @media (min-width: 760px) {
+    transform: translateX(100%);
+    opacity: 0;
+    z-index: -1999;
+  }
+
+  @media (max-width: 760px) {
+    width: 30%;
+    min-width: 20rem;
+    background-color: white;
+    z-index: 2000;
+    transform: translateX(100%);
+  }
 
 
 }
 
 .scrollbarVisible::-webkit-scrollbar {
-  width: 7px!important;
+  width: 7px !important;
 }
 
 .sidebar::-webkit-scrollbar {
   width: 0;
 }
+
