--- a/client/src/assets/sass/layout/_header.scss
+++ b/client/src/assets/sass/layout/_header.scss
@@ -19,19 +19,37 @@
     align-items: center;
     height: 100%;
     padding: 0 5rem;
+
+
+
+    @media (max-width: 760px) {
+      padding: 0 1rem;
+      //flex-flow: row;
+      //align-items: center;
+      //justify-content: space-between;
+    }
+
+
   }
 
 
   @media (max-width: 760px) {
-    padding: 0.5rem 2rem;
-    flex-flow: row;
-    align-items: center;
-    justify-content: space-between;
+    //padding: 0.5rem 2rem;
+    //flex-flow: row;
+    //align-items: center;
+    //justify-content: space-between;
   }
 
 
   &__logo{
     height: 4rem;
+
+
+    @media (max-width: 760px) {
+     display: none;
+    }
+
+
   }
 
 
@@ -41,15 +59,17 @@
     align-items: center;
     height: 60%;
     width: 25%;
+    min-width: 25rem;
     padding: 0.5rem 1.5rem;
-
-    //border: 1px solid red;
-
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 22px;
-
     background-color: $color-bg-light;
 
-    border: 1px solid rgba(0, 0, 0, 0.1);
+
+    @media (max-width: 760px) {
+      min-width: unset;
+      width: 50%;
+    }
 
     &.focused{
       border:1px solid rgba($color-primary, 0.7);
@@ -98,13 +118,26 @@
   &__controls{
 
 
-    width: 8%;
+    width: 15%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+
+
+    @media (max-width: 760px) {
+      position: absolute;
+      right: 10%;
+      top: 50%;
+      transform: translateY(-50%);
+      width: auto;
+    }
+    @media (max-width: 400px) {
+      right: 12%;
+    }
 
     &__container{
 
       position: relative;
+      margin: 0 1rem;
 
       img{
         width: 3.4rem;
@@ -116,6 +149,12 @@
 
     }
 
+    .logoutCont{
+
+      @media (max-width: 760px) {
+        display: none;
+      }
+    }
 
 
   }
@@ -156,6 +195,8 @@
     width: 100%;
     height: 2px;
     background-color: $color-primary;
+    transition: all 0.3s ease-in-out;
+
   }
 
   @media (min-width: 760px) {
@@ -185,7 +226,7 @@
     }
 
     & > :nth-child(3) {
-      display: none;
+      transform: rotate(-45deg) translate(2.5px, -2.5px);
     }
 
   }
