added friends, single post and fixed some issues

--- a/client/src/assets/sass/components/_btn.scss
+++ b/client/src/assets/sass/components/_btn.scss
@@ -35,10 +35,10 @@
 
     &:hover,
     &:active,
-    &:focus{
+    &:focus,
+    &.active{
       background-color: $color-primary;
       color: white;
-
     }
 
   }
