--- a/client/src/assets/sass/components/_sidebar.scss
+++ b/client/src/assets/sass/components/_sidebar.scss
@@ -55,8 +55,11 @@
 
     }
 
-    &:focus {
-      text-decoration: underline;
+    a{
+
+      &:focus {
+        text-decoration: underline;
+      }
     }
 
 
