--- a/client/src/assets/sass/components/_profileHeader.scss
+++ b/client/src/assets/sass/components/_profileHeader.scss
@@ -100,6 +100,7 @@
       border: 1px solid rgba($color-primary, 0.5);
 
       &:hover {
+        text-decoration: none;
         background-color: rgba($color-primary, 0.9);
       }
 
