added chat sidebar with new features

--- a/client/src/assets/sass/abstracts/_variables.scss
+++ b/client/src/assets/sass/abstracts/_variables.scss
@@ -23,8 +23,8 @@ $input-border: 1px solid rgba(#000,0.3);
 //$color-darkest-blue:#000c1c;
 
 $color-primary:#011537;
-//$color-primary-light:#009e90;
-//$color-primary-dark:#216660;
+$color-primary-light:#009e90;
+$color-primary-dark:#216660;
 
 
 $color-secondary:#2C70DA;
