added messanger header

--- a/client/src/assets/sass/main.scss
+++ b/client/src/assets/sass/main.scss
@@ -25,6 +25,7 @@
 @import "components/imageUploader";
 @import "components/loading";
 @import "components/message";
+@import "components/messangerHeader";
 @import "components/modal";
 @import "components/nameDisplay";
 @import "components/notificationPopup";
